CORE-32504: WE, PBK footer links spacing issue resolved on tablet AR.

--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/footer/_our-brands.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/footer/_our-brands.scss
@@ -7,8 +7,8 @@
 
       html[lang=ar] & {
         @include breakpoint($only-tablet) {
-          margin-#{$left}: 1rem;
-          margin-#{$right}: 0;
+          margin-left: 1rem;
+          margin-right: 0;
         }
       }
     }
